@@ -16,6 +16,7 @@ The built-in escape flags are:
 * `x` : XML escaping
 * `trim` : whitespace trimming, provided by `string.strip()`
 * `entity` : produces HTML entity references for applicable strings, derived from `htmlentitydefs`
+* `unicode` : produces a Python unicode string (this function is applied by default).
 
 To apply more than one filter, separate them by a comma:
 
@@ -49,7 +50,44 @@ A page can apply a default set of filters to all expression tags using the `expr
 Result:
 
     Escaped text: &lt;html&gt;some html&lt;/html&gt;
+
+#### The default_filters Argument {@name=defaultfilters}
+
+In addition to the `expression_filter` argument, the `default_filters` argument to both `Template` and `TemplateLookup` can specify filtering at the programmatic level.  This array-based argument defaults to `["unicode"]`:
+
+    {python}
+    t = TemplateLookup(directories=['/tmp'], default_filters=['unicode'])
+
+Further information about the default usage of `unicode` can be found in [unicode](rel:unicode).
     
+Any string name can be added to `default_filters` where it will be added to all expressions as a filter.  The filters are applied from left to right, meaning the leftmost filter is applied first.
+
+    {python}
+    t = Template(templatetext, default_filters=['unicode', 'myfilter'])
+    
+To ease the usage of `default_filters` with custom filters, you can also add imports (or other code) to all templates using the `imports` argument:
+
+    {python}
+    t = TemplateLookup(directories=['/tmp'], 
+        default_filters=['unicode', 'myfilter'], 
+        imports=['from mypackage import myfilter'])
+    
+The above will generate templates something like this:
+
+    {python}
+    # ....
+    from mypackage import myfilter
+
+    def render_body(context):
+        context.write(myfilter(unicode("some text")))
+
+The `unicode` function can be removed or replaced with another function, such as this example which assumes all expressions are utf-8 encoded strings:
+
+    {python}
+    t = Template(text, 
+        default_filters=['encodeutf8'], 
+        imports=["encodeutf8 = lambda x:unicode(x, 'utf-8')"])
+
 ### Filtering Defs
 
 The `%def` tag has a filter argument which will apply the given list of filter functions to the output of the `%def`:
